docs: update v2.4.0 learnings with resolution status and Gleam const limitation

--- a/docs/specs/v2.4.0_release_learnings.md
+++ b/docs/specs/v2.4.0_release_learnings.md
@@ -4,25 +4,21 @@
 
 ## Release Integration Learnings
 
-### 1. `EntityId` Unwrapping Is a Recurring Pain Point
+### 1. `EntityId` Unwrapping Is a Recurring Pain Point — ✅ RESOLVED
 **Problem**: `gleamdb.traverse` accepts `Int` internally but `gleamdb.pull` works with `fact.Eid` which wraps `EntityId`. The mismatch caused a type error during initial integration.
 
-**Lesson**: Future releases should consider a unified `resolve_eid(eid: Eid) -> Int` helper in the public API to eliminate the repeated `let fact.EntityId(id_int) = ...` pattern across consumer code.
+**Resolution**: Added `gleamdb.resolve_eid(db, eid) -> Int` public helper. `traverse()` now uses it internally.
 
 **Hickey Warning**: ⚠️ The `EntityId` wrapper exists for good reason — it de-complects identity from raw integers. But the API boundary should handle the unwrapping, not the consumer.
 
 ---
 
-### 2. `TraversalStep` Imports Require Destructuring
+### 2. `TraversalStep` Imports Require Destructuring — ✅ RESOLVED (Partially)
 **Problem**: Consumer code needs `import gleamdb/shared/types.{Out, In}` to use the DSL. This leaks internal module structure.
 
-**Lesson**: Future releases should re-export `Out` and `In` from the top-level `gleamdb` module for ergonomic imports:
-```gleam
-// Ideal:
-import gleamdb.{Out, In}
-// Current:
-import gleamdb/shared/types.{Out, In}
-```
+**Resolution**: Added `gleamdb.out(attr)` and `gleamdb.step_in(attr)` wrapper functions + `TraversalStep`/`TraversalExpr` type re-exports.
+
+**⚠️ Gleam Limitation**: `pub const Out = types.Out` does NOT work in Gleam — constructors with uppercase names cannot be aliased as constants. Wrapper functions (`pub fn out()`) are the idiomatic solution. Direct destructuring `import gleamdb/shared/types.{Out}` remains valid for pattern matching.
 
 ---
 
@@ -39,10 +35,10 @@ import gleamdb/shared/types.{Out, In}
 
 ---
 
-### 4. Prefetch Config Is Opt-In but Should Be Default
+### 4. Prefetch Config Is Opt-In but Should Be Default — ✅ RESOLVED
 **Observation**: No child project was using `prefetch_enabled: True` because the Config constructor defaults to `False`. Production systems like gswarm would benefit from prefetching by default.
 
-**Recommendation**: Consider changing the default to `True` in the next release, or providing a `gleamdb.start_optimized` constructor that enables all performance features.
+**Resolution**: Changed default to `True` in `transactor.gleam`. All 125 tests pass.
 
 ---
 
