docs: update all project docs for GleamDB v2.4.0 release
- release_notes.md: comprehensive v2.4.0 entry (features, changes, child projects)
- README.md: version 2.4.0, new feature bullets, updated code samples, doc links
- v2.4.0_release_learnings.md: gclaw fork resolved, rsync process documented
- router.gleam: health endpoint reports v2.4.0

--- a/docs/specs/v2.4.0_release_learnings.md
+++ b/docs/specs/v2.4.0_release_learnings.md
@@ -52,12 +52,18 @@
 
 ---
 
-### 6. `gclaw/` Has a Stale Forked Copy of GleamDB
+### 6. `gclaw/` Has a Stale Forked Copy of GleamDB — ✅ RESOLVED
 **Problem**: `gclaw/` contains a **full fork** of GleamDB source files (engine, index, ets, q, fact). It does NOT import GleamDB as a dependency — it has its own copy. This means v2.4.0 features are NOT available in gclaw without a full re-sync.
 
-**Action Required**: Future releases should either:
-1. Convert gclaw to use GleamDB as a proper Gleam dependency
-2. Or maintain a sync script that copies the latest gleamdb source into gclaw
+**Resolution**: Rsynced canonical GleamDB v2.4.0 into `gclaw/src/gleamdb/`. Removed deprecated `storage/disk`, `transactor.create_bm25_index`, `register_index_adapter`, `create_index`. Migrated `engine.run` calls to `gleamdb.query_state`. All 5 tests pass, 0 warnings.
+
+**Recommended Process for Future Releases**:
+```bash
+# From project root, sync canonical source to child project vendor
+rsync -av --delete --exclude='gleamcms/' src/gleamdb/ <child>/src/gleamdb/
+rsync -av src/gleamdb_*_ffi.erl src/gleam_erl_ffi.erl <child>/src/
+rm -f <child>/src/gleamdb/gleamcms.gleam  # Remove CMS entrypoint
+```
 
 ---
 
@@ -70,12 +76,12 @@
 
 ## Summary Table
 
-| Learning | Severity | Action |
+| Learning | Severity | Status |
 |---|---|---|
-| EntityId unwrapping | Medium | Add `resolve_eid` helper |
-| TraversalStep import path | Low | Re-export from `gleamdb` |
-| Traverse vs Datalog | Info | Document decision matrix |
-| Prefetch default | Medium | Change default to `True` |
-| Zero-copy threshold guidance | Low | Add tuning docs |
-| gclaw fork drift | High | Convert to dependency or sync script |
-| Sly ACP bridge | High | Add traverse ACP handler |
+| EntityId unwrapping | Medium | ✅ `resolve_eid` added |
+| TraversalStep import path | Low | ✅ Re-exported from `gleamdb` |
+| Traverse vs Datalog | Info | ✅ Decision matrix documented |
+| Prefetch default | Medium | ✅ Default changed to `True` |
+| Zero-copy threshold guidance | Low | Tuning docs pending |
+| gclaw fork drift | High | ✅ Vendor synced v2.4.0 |
+| Sly ACP bridge | High | Pending — needs Rust ACP handler |
