feat: release v2.5.0 with Graph Traversal Supernode Protection and Zero-Copy serialization tuning

--- a/docs/specs/v2.4.0_release_learnings.md
+++ b/docs/specs/v2.4.0_release_learnings.md
@@ -42,10 +42,10 @@
 
 ---
 
-### 5. Zero-Copy Threshold Needs Tuning Guidance
+### 5. Zero-Copy Threshold Needs Tuning Guidance — ✅ RESOLVED
 **Observation**: The default `zero_copy_threshold` of 10,000 is reasonable for analytical workloads but could be too aggressive for interactive queries that expect structured `PullResult` types.
 
-**Recommendation**: Document clear guidance:
+**Resolution**: Added clear guidance to `performance_guide.md`:
 - `1,000` — Aggressive zero-copy (analytical/batch workloads)
 - `10,000` — Default (balanced)
 - `100,000` — Conservative (interactive apps expecting structured results)
@@ -82,6 +82,6 @@ rm -f <child>/src/gleamdb/gleamcms.gleam  # Remove CMS entrypoint
 | TraversalStep import path | Low | ✅ Re-exported from `gleamdb` |
 | Traverse vs Datalog | Info | ✅ Decision matrix documented |
 | Prefetch default | Medium | ✅ Default changed to `True` |
-| Zero-copy threshold guidance | Low | Tuning docs pending |
+| Zero-copy threshold guidance | Low | ✅ Added to `performance_guide.md` |
 | gclaw fork drift | High | ✅ Vendor synced v2.4.0 |
 | Sly ACP bridge | High | Pending — needs Rust ACP handler |
